feat: get sop couple
