# storage/api-docs/api-docs.json
@@ -916,6 +916,54 @@
                 ]
             }
         },
+        "/api/v1/sop-couple": {
+            "get": {
+                "tags": [
+                    "Sop Couple"
+                ],
+                "description": "Get all sop couples",
+                "operationId": "314ed5aa9802a9b157d442956f1edd97",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Success get couple SOP"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "name": {
+                                                        "type": "string",
+                                                        "example": "Communication"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/users/me": {
             "get": {
                 "tags": [
@@ -1064,6 +1112,10 @@
         {
             "name": "Sop Categories",
             "description": "Sop Categories"
+        },
+        {
+            "name": "Sop Couple",
+            "description": "Sop Couple"
         },
         {
             "name": "Users",
